--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bench Time</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div id="home" class="big-bg">
+        <header>
+          <p><a href=""><img src="img/benchtime_logo.png" alt=""></a></p>
+          <nav>
+            <ul>
+              <li><a href="#about">どんなサークル？</a></li>
+              <li><a href="#good">良いところ</a></li>
+              <li><a href="#active">活動について</a></li>
+              <li><a href="#partipation">体験に参加</a></li>
+              <li><a href="#question">Q & A</a></li>
+            </ul>
+          </nav>
+        </header>
+        
+        <section class="firstview">
+          <h1>パン作りの楽しさを<br>みなさまに</h1>
+        </section>
+      </div>
 </body>
 </html>
