about section create

--- a/index.html
+++ b/index.html
@@ -9,23 +9,40 @@
 </head>
 
 <body>
-    <div id="home" class="big-bg">
-        <header>
-          <p><a href=""><img src="img/benchtime_logo.png" alt=""></a></p>
-          <nav>
-            <ul>
-              <li><a href="#about">どんなサークル？</a></li>
-              <li><a href="#good">良いところ</a></li>
-              <li><a href="#active">活動について</a></li>
-              <li><a href="#partipation">体験に参加</a></li>
-              <li><a href="#question">Q & A</a></li>
-            </ul>
-          </nav>
-        </header>
-        
-        <section class="firstview">
-          <h1>パン作りの楽しさを<br>みなさまに</h1>
-        </section>
-      </div>
+  <div id="home" class="big-bg">
+    <header>
+      <p><a href=""><img src="img/benchtime_logo.png" alt=""></a></p>
+      <nav>
+        <ul>
+          <li><a href="#about">どんなサークル？</a></li>
+          <li><a href="#good">良いところ</a></li>
+          <li><a href="#active">活動について</a></li>
+          <li><a href="#partipation">体験に参加</a></li>
+          <li><a href="#question">Q & A</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="bg"></div>
+    <div class="bc"></div>
+
+    <section class="firstview">
+      <h1>パン<span class="white">作りの楽しさを</span><br>みな<span class="white">さまに</span></h1>
+    </section>
+  </div>
+
+  <section id="about" class="about">
+    <p class="title">どんなサークル？</p>
+    <div class="center">
+      <p class="text">
+        Bench Timeは毎週楽しくおいしいパンを作っています！<br>
+        ただ作るだけでなく、発酵などの待ち時間では授業のことや趣味のことなどで毎回盛り上がります！<br>
+        おしゃべり好きな人、パンが好きな人、ゆるいサークルを探している人はぜひ体験に！！<br>
+        人数は2023年5月20日時点で75人所属しており、毎回の活動では10人前後参加します！<br>
+        男女比は約１：１！気軽にご参加ください！
+      </p>
+    </div>
+  </section>
+
 </body>
 </html>
