--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bench Time</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -33,15 +38,44 @@
 
   <section id="about" class="about">
     <p class="title">どんなサークル？</p>
+    <div class="content">
+      <div class="slider mypattern">
+        <div><img src="img/slick1.jpg"></div>
+        <div><img src="img/slick2.jpg"></div>
+        <div><img src="img/slick3.jpg"></div>
+        <div><img src="img/slick4.jpg"></div>
+        <div><img src="img/slick5.jpg"></div>
+      </div>
+    </div>
     <div class="center">
       <p class="text">
         Bench Timeは毎週楽しくおいしいパンを作っています！<br>
         ただ作るだけでなく、発酵などの待ち時間では授業のことや趣味のことなどで毎回盛り上がります！<br>
-        おしゃべり好きな人、パンが好きな人、ゆるいサークルを探している人はぜひ体験に！！<br>
+        <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<span class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
         人数は2023年5月20日時点で75人所属しており、毎回の活動では10人前後参加します！<br>
         男女比は約１：１！気軽にご参加ください！
       </p>
     </div>
+  </section>
+
+  <section id="good" class="good">
+    <div class="center">
+      <p class="subtitle">実際に聞いた！</p>
+      <p class="title">Bench Time の良いところ！</p>
+    </div>
+    <div class="husen1">
+      <img src="img/pink_memo.png" alt="">
+      <p class="pote text1">会費がその都度回収だから<br>気軽に参加できる！！</p>
+    </div>
+    <div class="husen2">
+      <img src="img/blue_memo.png" alt="">
+      <p class="pote text2">出来立てほやほやの<br>アツアツパンが食べれる！！</p>
+    </div>
+    <div class="husen3">
+      <img src="img/yellow_memo.png" alt="">
+      <p class="pote text3">学年、学類、性別関係なく<br>楽しくおしゃべりができる！</p>
+    </div>
+
   </section>
 
 </body>
