--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="#about">どんなサークル？</a></li>
           <li><a href="#good">良いところ</a></li>
           <li><a href="#active">活動について</a></li>
-          <li><a href="#partipation">体験に参加</a></li>
-          <li><a href="#question">Q & A</a></li>
+          <li><a href="#join">体験に参加</a></li>
+          <li><a href="#qa">Q & A</a></li>
         </ul>
       </nav>
     </header>
@@ -36,7 +36,7 @@
     </section>
   </div>
 
-  <section id="about" class="about">
+  <section id="about" class="about center">
     <p class="title">どんなサークル？</p>
     <div class="content">
       <div class="slider mypattern">
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="center">
-      <p class="text">
+      <p class="about_text">
         Bench Timeは毎週楽しくおいしいパンを作っています！<br>
         ただ作るだけでなく、発酵などの待ち時間では授業のことや趣味のことなどで毎回盛り上がります！<br>
         <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<span class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
@@ -58,11 +58,9 @@
     </div>
   </section>
 
-  <section id="good" class="good">
-    <div class="center">
-      <p class="subtitle">実際に聞いた！</p>
-      <p class="title">Bench Time の良いところ！</p>
-    </div>
+  <section id="good" class="good center">
+    <p class="subtitle">実際に聞いた！</p>
+    <p class="title">Bench Time の良いところ！</p>
     <div class="husen1">
       <img src="img/pink_memo.png" alt="">
       <p class="pote text1">会費がその都度回収だから<br>気軽に参加できる！！</p>
@@ -75,8 +73,127 @@
       <img src="img/yellow_memo.png" alt="">
       <p class="pote text3">学年、学類、性別関係なく<br>楽しくおしゃべりができる！</p>
     </div>
-
+    <div class="husen4">
+      <img src="img/blue_memo.png" alt="">
+      <p class="pote text4">雰囲気がほんわかしていて良い！</p>
+    </div>
+    <div class="husen5">
+      <img src="img/green_memo.png" alt="">
+      <p class="pote text5">料理が得意じゃなくても<br>優しく教えてくれる！！</p>
+    </div>
   </section>
+
+  <section id="active" class="active center">
+    <p class="title">活動について</p>
+    <div class="box">
+      <img src="img/pc_calender.jpg" alt="">
+      <div class="textbox">
+        <h2>日程</h2>
+        <p>
+          奇数週(第１、第３)土曜日　10:30 ~ 13:30 <br>
+          偶数週(第２、第４)木曜日　18:30 ~ 21:30 <br>
+          の日程で活動しています！<br>
+          画像は2023年5月のカレンダーです。参考までに！
+        </p>
+      </div>
+    </div>
+    <div class="box">
+      <img src="img/pc_map.jpg" alt="">
+      <div class="textbox">
+        <h2>場所</h2>
+        <p>
+          毎回春日交流センターで活動しています！<br>
+          向かいのローソンが目印です！<br>
+          住所 : 茨城県つくば市春日2-36-1
+        </p>
+      </div>
+    </div>
+    <div class="spetextbox">
+      <h2>みんなの気になる情報！</h2>
+      <p>
+        会費はその都度300円程度回収のため、気楽に参加いただけます！体験の時は無料です！<br>
+        持ち物は決まったものはありません！作ったパンを持ち帰る方は袋を持参してください。<br>
+        服装は粉が付着してしまう可能性があるため、粉が目立たない服(白い服など)、汚れても問題 <br>がない服装を推奨しています！
+      </p>
+    </div>
+  </section>
+
+  <section id="join" class="join left">
+    <div class="all_text">
+      <p class="title">ぜひ一緒に楽しく</p><br>
+      <p class="title">おいしいパンを</p><br>
+      <p class="title">作ってみませんか？</p>
+      <p class="join_text">
+        <a href="https://twitter.com/time_bench">Twitter</a>、<a href="https://www.instagram.com/tsukubabenchtime/">Instagram</a>にて随時学年学類性別<br>
+        問わず募集しております。卵もほとんど<br>
+        割ったことがない人から日頃自炊をよくする人、<br>
+        みんなとおしゃべりがしたい人まで幅広く<br>
+        体験にいらっしゃってくれます！<br>
+        少しでも興味を持っていただけたら<br>
+        お気軽にご連絡ください！！
+      </p>
+    </div>
+    <div class="accent"></div>
+    <div class="z2"></div>
+    <div class="z3"></div>
+  </section>
+
+  <section id="qa" class="qa left">
+    <p class="title">Q & A</p>
+    <div class="ans">
+      <div class="qabox">
+        <div class="under">
+          <p class="q_text_f">
+            Q 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
+          </p>
+          <p class="q_text">
+            Q 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
+          </p>
+          <p class="a_text">
+            A 備品に使い捨ての手袋があるのでそのままで大丈夫です！
+          </p>
+        </div>
+      </div>
+      <div class="qabox">
+        <div class="under">
+          <p class="q_text_f">
+            Q 院生でも大丈夫ですか？
+          </p>
+          <p class="q_text">
+            Q 院生でも大丈夫ですか？
+          </p>
+          <p class="a_text">
+            A 学年問わず体験歓迎です！！2023年5月時点では既に3人ほど新しく入サしています！
+          </p>
+        </div>
+      </div>
+      <div class="qabox">
+        <div class="under">
+          <p class="q_text_f">
+            Q 料理未経験でも大丈夫ですか？
+          </p>
+          <p class="q_text">
+            Q 料理未経験でも大丈夫ですか？
+          </p>
+          <p class="a_text">
+            A サークル員が1から教えてくれるので全く問題ないです！
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p class="p">各種SNSにて普段の活動の様子を見れたり体験の参加希望を募集していたりします！<br>
+      興味があったら各種SNSのフォロー、体験希望DMお待ちしております！</p>
+    <div class="logo-container">
+      <div class="logo">
+        <a href="https://twitter.com/time_bench"><img src="img/logo_twitter.png" alt=""></a>
+        <a href="https://www.instagram.com/tsukubabenchtime/"><img src="img/logo_instagram.png" alt=""></a>
+      </div>
+    </div>
+    <p class="c">&copy; 2023 Bench Time</p>
+  </footer>
 
 </body>
 </html>
