--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
@@ -23,7 +26,7 @@
           <li><a href="#good">良いところ</a></li>
           <li><a href="#active">活動について</a></li>
           <li><a href="#join">体験に参加</a></li>
-          <li><a href="#qa">Q & A</a></li>
+          <li><a href="#qa"><span class="en">Q & A</span></a></li>
         </ul>
       </nav>
     </header>
@@ -49,7 +52,7 @@
     </div>
     <div class="center">
       <p class="about_text">
-        Bench Timeは毎週楽しくおいしいパンを作っています！<br>
+        <span class="en">Bench Time</span>は毎週楽しくおいしいパンを作っています！<br>
         ただ作るだけでなく、発酵などの待ち時間では授業のことや趣味のことなどで毎回盛り上がります！<br>
         <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<span class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
         人数は2023年5月20日時点で75人所属しており、毎回の活動では10人前後参加します！<br>
@@ -60,7 +63,7 @@
 
   <section id="good" class="good center">
     <p class="subtitle">実際に聞いた！</p>
-    <p class="title">Bench Time の良いところ！</p>
+    <p class="title"><span class="en">Bench Time</span> の良いところ！</p>
     <div class="husen1">
       <img src="img/pink_memo.png" alt="">
       <p class="pote text1">会費がその都度回収だから<br>気軽に参加できる！！</p>
@@ -88,6 +91,8 @@
     <div class="box">
       <img src="img/pc_calender.jpg" alt="">
       <div class="textbox">
+        <div class="kugi1"></div>
+        <div class="kugi2"></div>
         <h2>日程</h2>
         <p>
           奇数週(第１、第３)土曜日　10:30 ~ 13:30 <br>
@@ -100,6 +105,8 @@
     <div class="box">
       <img src="img/pc_map.jpg" alt="">
       <div class="textbox">
+        <div class="kugi1"></div>
+        <div class="kugi2"></div>
         <h2>場所</h2>
         <p>
           毎回春日交流センターで活動しています！<br>
@@ -109,6 +116,8 @@
       </div>
     </div>
     <div class="spetextbox">
+      <div class="kugi1"></div>
+      <div class="kugi2"></div>
       <h2>みんなの気になる情報！</h2>
       <p>
         会費はその都度300円程度回収のため、気楽に参加いただけます！体験の時は無料です！<br>
@@ -124,7 +133,7 @@
       <p class="title">おいしいパンを</p><br>
       <p class="title">作ってみませんか？</p>
       <p class="join_text">
-        <a href="https://twitter.com/time_bench">Twitter</a>、<a href="https://www.instagram.com/tsukubabenchtime/">Instagram</a>にて随時学年学類性別<br>
+        <a href="https://twitter.com/time_bench"><span class="en">Twitter</span></a>、<a href="https://www.instagram.com/tsukubabenchtime/"><span class="en">Instagram</span></a>にて随時学年学類性別<br>
         問わず募集しております。卵もほとんど<br>
         割ったことがない人から日頃自炊をよくする人、<br>
         みんなとおしゃべりがしたい人まで幅広く<br>
@@ -139,44 +148,44 @@
   </section>
 
   <section id="qa" class="qa left">
-    <p class="title">Q & A</p>
+    <p class="title"><span class="en">Q & A</span></p>
     <div class="ans">
       <div class="qabox">
         <div class="under">
           <p class="q_text_f">
-            Q 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
+            <span class="en">Q</span> 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
           </p>
           <p class="q_text">
-            Q 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
+            <span class="en">Q</span> 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
           </p>
           <p class="a_text">
-            A 備品に使い捨ての手袋があるのでそのままで大丈夫です！
+            <span class="en">A</span> 備品に使い捨ての手袋があるのでそのままで大丈夫です！
           </p>
         </div>
       </div>
       <div class="qabox">
         <div class="under">
           <p class="q_text_f">
-            Q 院生でも大丈夫ですか？
+            <span class="en">Q</span> 院生でも大丈夫ですか？
           </p>
           <p class="q_text">
-            Q 院生でも大丈夫ですか？
+            <span class="en">Q</span> 院生でも大丈夫ですか？
           </p>
           <p class="a_text">
-            A 学年問わず体験歓迎です！！2023年5月時点では既に3人ほど新しく入サしています！
+            <span class="en">A</span> 学年問わず体験歓迎です！！2023年5月時点では既に3人ほど新しく入サしています！
           </p>
         </div>
       </div>
       <div class="qabox">
         <div class="under">
           <p class="q_text_f">
-            Q 料理未経験でも大丈夫ですか？
+            <span class="en">Q</span> 料理未経験でも大丈夫ですか？
           </p>
           <p class="q_text">
-            Q 料理未経験でも大丈夫ですか？
+            <span class="en">Q</span> 料理未経験でも大丈夫ですか？
           </p>
           <p class="a_text">
-            A サークル員が1から教えてくれるので全く問題ないです！
+            <span class="en">A</span> サークル員が1から教えてくれるので全く問題ないです！
           </p>
         </div>
       </div>
@@ -184,15 +193,15 @@
   </section>
 
   <footer>
-    <p class="p">各種SNSにて普段の活動の様子を見れたり体験の参加希望を募集していたりします！<br>
-      興味があったら各種SNSのフォロー、体験希望DMお待ちしております！</p>
+    <p class="p">各種 <span class="en">SNS</span>にて普段の活動の様子を見れたり体験の参加希望を募集していたりします！<br>
+      興味があったら各種<span class="en">SNS</span>のフォロー、体験希望<span class="en">DM</span>お待ちしております！</p>
     <div class="logo-container">
       <div class="logo">
         <a href="https://twitter.com/time_bench"><img src="img/logo_twitter.png" alt=""></a>
         <a href="https://www.instagram.com/tsukubabenchtime/"><img src="img/logo_instagram.png" alt=""></a>
       </div>
     </div>
-    <p class="c">&copy; 2023 Bench Time</p>
+    <p class="c">&copy; 2023 <span class="en">Bench Time</span></p>
   </footer>
 
 </body>
