--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <div class="center">
       <p class="about_text">
         <span class="en">Bench Time</span>は毎週楽しくおいしいパンを作っています！<br>
-        ただ作るだけでなく、発酵などの待ち時間では授業のことや趣味のことなどで毎回盛り上がります！<br>
-        <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<span class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
-        人数は2023年5月20日時点で75人所属しており、毎回の活動では10人前後参加します！<br>
+        ただ作るだけでなく、発酵などの待ち時間では授業のことや<br class="sp">趣味のことなどで毎回盛り上がります！<br>
+        <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<br class="sp"><span class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
+        人数は2023年5月20日時点で75人所属しており、<br class="sp">毎回の活動では10人前後参加します！<br>
         男女比は約１：１！気軽にご参加ください！
       </p>
     </div>
@@ -120,24 +120,26 @@
       <div class="kugi2"></div>
       <h2>みんなの気になる情報！</h2>
       <p>
-        会費はその都度300円程度回収のため、気楽に参加いただけます！体験の時は無料です！<br>
-        持ち物は決まったものはありません！作ったパンを持ち帰る方は袋を持参してください。<br>
-        服装は粉が付着してしまう可能性があるため、粉が目立たない服(白い服など)、汚れても問題 <br>がない服装を推奨しています！
+        会費はその都度300円程度回収のため、<br class="sp">気楽に参加いただけます！体験の時は無料です！<br>
+        持ち物は決まったものはありません！作ったパンを<br class="sp">持ち帰る方は袋を持参してください。<br>
+        服装は粉が付着してしまう可能性があるため、<br class="sp">粉が目立たない服(白い服など)、汚れても問題 <br>がない服装を推奨しています！
       </p>
     </div>
   </section>
 
   <section id="join" class="join left">
     <div class="all_text">
-      <p class="title">ぜひ一緒に楽しく</p><br>
-      <p class="title">おいしいパンを</p><br>
-      <p class="title">作ってみませんか？</p>
+      <div class="title_container">
+        <p class="title">ぜひ一緒に楽しく</p><br>
+        <p class="title">おいしいパンを</p><br>
+        <p class="title">作ってみませんか？</p>
+      </div>
       <p class="join_text">
         <a href="https://twitter.com/time_bench"><span class="en">Twitter</span></a>、<a href="https://www.instagram.com/tsukubabenchtime/"><span class="en">Instagram</span></a>にて随時学年学類性別<br>
-        問わず募集しております。卵もほとんど<br>
+        問わず募集しております。<span class="none">卵もほとんど<br>
         割ったことがない人から日頃自炊をよくする人、<br>
         みんなとおしゃべりがしたい人まで幅広く<br>
-        体験にいらっしゃってくれます！<br>
+        体験にいらっしゃってくれます！</span><br>
         少しでも興味を持っていただけたら<br>
         お気軽にご連絡ください！！
       </p>
@@ -153,10 +155,10 @@
       <div class="qabox">
         <div class="under">
           <p class="q_text_f">
-            <span class="en">Q</span> 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
+            <span class="en">Q</span> ネイルは落とした方がいいですか？
           </p>
           <p class="q_text">
-            <span class="en">Q</span> 体験の時って塗るだけのネイルとかも落としていった方がいいですか？
+            <span class="en">Q</span> ネイルは落とした方がいいですか？
           </p>
           <p class="a_text">
             <span class="en">A</span> 備品に使い捨ての手袋があるのでそのままで大丈夫です！
