--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="bc"></div>
 
     <section class="firstview">
-      <h1>パン<span class="white">作りの楽しさを</span><br>みな<span class="white">さまに</span></h1>
+      <h1>パン<span class="white">作りの<br class="sp">楽しさを</span><br>みな<span class="white">さまに</span></h1>
     </section>
   </div>
 
