sp update active

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="spetextbox">
       <div class="kugi1"></div>
       <div class="kugi2"></div>
-      <h2>みんなの気になる情報！</h2>
+      <h2>みんなの<br class="sp">気になる情報！</h2>
       <p>
         会費はその都度300円程度回収のため、<br class="sp">気楽に参加いただけます！体験の時は無料です！<br>
         持ち物は決まったものはありません！作ったパンを<br class="sp">持ち帰る方は袋を持参してください。<br>
@@ -195,7 +195,7 @@
   </section>
 
   <footer>
-    <p class="p">各種 <span class="en">SNS</span>にて普段の活動の様子を見れたり体験の参加希望を募集していたりします！<br>
+    <p class="p">各種 <span class="en">SNS</span>にて普段の活動の様子を<br class="sp">見れたり体験の参加希望を募集していたりします！<br>
       興味があったら各種<span class="en">SNS</span>のフォロー、体験希望<span class="en">DM</span>お待ちしております！</p>
     <div class="logo-container">
       <div class="logo">
