--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           奇数週(第１、第３)土曜日　10:30 ~ 13:30 <br>
           偶数週(第２、第４)木曜日　18:30 ~ 21:30 <br>
           の日程で活動しています！<br>
-          画像は2023年5月のカレンダーです。参考までに！
+          画像は2023年5月のカレンダーです。<br class="sp">参考までに！
         </p>
       </div>
     </div>
