--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         </ul>
       </nav>
     </header>
+    
+    <div id="menu">
+      <div><a href="#menu" class="menuopen">＝</a><a href="#close" class="menuclose">X</a></div>
+      <ul>
+        <li><a href="#about">どんなサークル？</a></li>
+        <li><a href="#good">良いところ</a></li>
+        <li><a href="#active">活動について</a></li>
+        <li><a href="#join">体験に参加</a></li>
+        <li><a href="#qa"><span class="en">Q & A</span></a></li>
+      </ul>
+    </div>
 
     <div class="bg"></div>
     <div class="bc"></div>
@@ -160,7 +171,7 @@
           <p class="q_text">
             <span class="en">Q</span> ネイルは落とした方がいいですか？
           </p>
-          <p class="a_text">
+          <p class="a_text a_sp">
             <span class="en">A</span> 備品に使い捨ての手袋があるのでそのままで大丈夫です！
           </p>
         </div>
@@ -186,7 +197,7 @@
           <p class="q_text">
             <span class="en">Q</span> 料理未経験でも大丈夫ですか？
           </p>
-          <p class="a_text">
+          <p class="a_text a_sp">
             <span class="en">A</span> サークル員が1から教えてくれるので全く問題ないです！
           </p>
         </div>
