--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="img/site.webmanifest">
-    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <title>Bench Time</title>
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/slick-theme.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/main.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/site.webmanifest">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <title>Bench Time</title>
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/slick-theme.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
         </ul>
       </nav>
     </header>
-    
+
     <div id="menu">
       <div><a href="#menu" class="menuopen">＝</a><a href="#close" class="menuclose">X</a></div>
       <ul>
@@ -72,7 +73,8 @@
       <p class="about_text">
         <span class="en">Bench Time</span>は毎週楽しくおいしいパンを作っています！<br>
         ただ作るだけでなく、発酵などの待ち時間では授業のことや<br class="sp">趣味のことなどで毎回盛り上がります！<br>
-        <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<br class="sp"><span class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
+        <span class="emphasis">おしゃべり好きな人</span>、<span class="emphasis">パンが好きな人</span>、<br class="sp"><span
+          class="emphasis">ゆるいサークルを探している人</span>はぜひ体験に！！<br>
         人数は2023年5月20日時点で75人所属しており、<br class="sp">毎回の活動では10人前後参加します！<br>
         男女比は約１：１！気軽にご参加ください！
       </p>
@@ -153,11 +155,12 @@
         <p class="title">作ってみませんか？</p>
       </div>
       <p class="join_text">
-        <a href="https://twitter.com/time_bench"><span class="en">Twitter</span></a>、<a href="https://www.instagram.com/tsukubabenchtime/"><span class="en">Instagram</span></a>にて随時学年学類性別<br>
+        <a href="https://twitter.com/time_bench"><span class="en">Twitter</span></a>、<a
+          href="https://www.instagram.com/tsukubabenchtime/"><span class="en">Instagram</span></a>にて随時学年学類性別<br>
         問わず募集しております。<span class="none">卵もほとんど<br>
-        割ったことがない人から日頃自炊をよくする人、<br>
-        みんなとおしゃべりがしたい人まで幅広く<br>
-        体験にいらっしゃってくれます！</span><br>
+          割ったことがない人から日頃自炊をよくする人、<br>
+          みんなとおしゃべりがしたい人まで幅広く<br>
+          体験にいらっしゃってくれます！</span><br>
         少しでも興味を持っていただけたら<br>
         お気軽にご連絡ください！！
       </p>
@@ -225,4 +228,5 @@
   </footer>
 
 </body>
+
 </html>
