sp menu chande = to ≡

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <div id="menu">
-      <div><a href="#menu" class="menuopen">＝</a><a href="#close" class="menuclose">X</a></div>
+      <div><a href="#menu" class="menuopen">≡</a><a href="#close" class="menuclose">×</a></div>
       <ul>
         <li><a href="#about">どんなサークル？</a></li>
         <li><a href="#good">良いところ</a></li>
