--- a/index.html
+++ b/index.html
@@ -84,31 +84,35 @@
   <section id="good" class="good center">
     <p class="subtitle">実際に聞いた！</p>
     <p class="title"><span class="en">Bench Time</span> の良いところ！</p>
-    <div class="husen_box">
-        <div class="husen_top">
-          <div class="h_1">
-            <img src="img/pink_memo.png" alt="" class="img_husen">
-            <p class="ht">会費がその都度回収だから<br>気軽に参加できる！！</p>
-          </div>
-          <div class="h_2">
-            <img src="img/blue_memo.png" alt="" class="img_husen">
-            <p class="ht">出来立てほやほやの<br>アツアツパンが食べれる！！</p>
+    <div class="husen_wrapper">
+        <div class="husen__item">
+          <div class="husen__item--inner">
+            <img src="img/pink_memo.png" alt="" class="husen__item--background">
+            <p class="husen__item--text">会費がその都度回収だから<br>気軽に参加できる！！</p>
           </div>
         </div>
-        <div class="husen_middle">
-          <div class="h_3">
-            <img src="img/yellow_memo.png" alt="" class="img_husen">
-            <p class="ht">学年、学類、性別関係なく<br>楽しくおしゃべりができる！</p>
+        <div class="husen__item">
+          <div class="husen__item--inner">
+            <img src="img/blue_memo.png" alt="" class="husen__item--background">
+            <p class="husen__item--text">出来立てほやほやの<br>アツアツパンが食べれる！！</p>
           </div>
         </div>
-        <div class="husen_bottom">
-          <div class="h_4">
-            <img src="img/blue_memo.png" alt="" class="img_husen">
-            <p class="ht">雰囲気がほんわかしていて良い！</p>
+        <div class="husen__item">
+          <div class="husen__item--inner">
+            <img src="img/yellow_memo.png" alt="" class="husen__item--background">
+            <p class="husen__item--text">学年、学類、性別関係なく<br>楽しくおしゃべりができる！</p>
           </div>
-          <div class="h_5">
-            <img src="img/green_memo.png" alt="" class="img_husen">
-            <p class="ht">料理が得意じゃなくても<br>優しく教えてくれる！！</p>
+        </div>
+        <div class="husen__item">
+          <div class="husen__item--inner">
+            <img src="img/blue_memo.png" alt="" class="husen__item--background">
+            <p class="husen__item--text">雰囲気がほんわかしていて良い！</p>
+          </div>
+        </div>
+        <div class="husen__item">
+          <div class="husen__item--inner">
+            <img src="img/green_memo.png" alt="" class="husen__item--background">
+            <p class="husen__item--text">料理が得意じゃなくても<br>優しく教えてくれる！！</p>
           </div>
         </div>
       </div>
